<resources>
    <string name="app_name">Beats</string>
    <string name="title_activity_login">Beats Login</string>

    <string name="login_password_label">Password: </string>
    <string name="login_email_label">Email: </string>
    <string name="login_login_label">Login</string>
    <string name="login_signup_label">Sign Up</string>
    <string name="login_not_member_label">Not already a member?</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="signup_signup_label">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_home_fragment">Home</string>
    <string name="title_my_beats_fragment">My Beats</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_playlist_details">Playlist Details</string>
    <string name="login_name_label">Name:</string>
    <string name="title_activity_playlist_new">New Playlist</string>
    <string name="title_activity_playlist_edit">Edit Playlist</string>
    <string name="action_new_playlist">New Playlist</string>
    <string name="action_del_playlist">Delete Playlist</string>
    <string name="action_search_playlist">Search Playlist</string>
    <string name="dialog_rate_playlist_title">Rate Playlist</string>
    <string name="action_edit_playlist">Edit Playlist</string>
    <string name="action_edit_song">Edit Song</string>
    <string name="action_del_song">Delete Song</string>
    <string name="dialog_add_song_title">Song Details</string>
    <string name="menu_song_options_title">Song Options</string>

</resources>
